feature(trip branch): set trip graph
